Migrated all URLs to use https. Updated gh-pages text to show the latest state of Mac (no Chrome, Safari and only Firefox 46)

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 <p>Use Vernier sensors to bring real world data into your Scratch projects.</p>
 
 <ul>
-<li>Use the Go!Temp extension to obtain a real-time temperature reading from a connected <a href="http://www.vernier.com/products/sensors/temperature-sensors/go-temp/">Go!Temp</a> probe.</li>
-<li>Use the Go!Motion extension to obtain a real-time position reading from a connected <a href="http://www.vernier.com/products/sensors/motion-detectors/go-mot/">Go!Motion</a> device.</li>
-<li>Use the Go!Link extension to obtain real-time data from a connected <a href="http://www.vernier.com/products/interfaces/go-link/">Go!Link</a> interface and compatible Vernier sensor.</li>
+<li>Use the Go!Temp extension to obtain a real-time temperature reading from a connected <a href="https://www.vernier.com/products/sensors/temperature-sensors/go-temp/">Go!Temp</a> probe.</li>
+<li>Use the Go!Motion extension to obtain a real-time position reading from a connected <a href="https://www.vernier.com/products/sensors/motion-detectors/go-mot/">Go!Motion</a> device.</li>
+<li>Use the Go!Link extension to obtain real-time data from a connected <a href="https://www.vernier.com/products/interfaces/go-link/">Go!Link</a> interface and compatible Vernier sensor.</li>
 </ul>
 
 <hr>
@@ -40,7 +40,7 @@
 
 <p>In order to connect Scratch to a Go! device, you will need to install a web browser plugin. Follow steps 1 and 2 on the <a href="https://scratch.mit.edu/info/ext_download/">Scratch Extensions Browser Plugin webpage</a> to download and install the plugin.
 
-<p><em>Note: At the moment, you cannot use the Vernier Go! extension in a Chrome web browser on Mac OS X. It </em>will<em> work in Safari and other web browsers.<br>
+<p><em>Note: At the moment, you cannot use the Vernier Go! extension in a Chrome or Safari web browser on Mac OS X. It </em>will<em> work in an older <a href="https://ftp.mozilla.org/pub/firefox/releases/46.0/mac/en-US/Firefox%2046.0.dmg">Firefox 46</a> web browser. After installing Firefox 46, turn off Firefox auto-updating by going to the Preferences, the Advanced -> Update -> Never check for updates.<br>
 
 <p>The extension should work in a Chrome or Edge browser (with the plugin installed) on a Windows computer; it is </em>not<em> currently compatible with Firefox.</em>
 
@@ -50,13 +50,13 @@
 <p>Launch one of the Vernier Go! extensions by going to one of the following URLs:</p>
 
 <p><strong>Go!Temp</strong><br>
-<a href="http://scratchx.org/?url=http://vernierst.github.io/scratch-vernier-go-extensions/go_temp_extension.js">http://scratchx.org/?url=http://vernierst.github.io/scratch-vernier-go-extensions/go_temp_extension.js</a></p>
+<a href="https://scratchx.org/?url=https://vernierst.github.io/scratch-vernier-go-extensions/go_temp_extension.js">https://scratchx.org/?url=https://vernierst.github.io/scratch-vernier-go-extensions/go_temp_extension.js</a></p>
 
 <p><strong>Go!Motion</strong><br>
-<a href="http://scratchx.org/?url=http://vernierst.github.io/scratch-vernier-go-extensions/go_motion_extension.js">http://scratchx.org/?url=http://vernierst.github.io/scratch-vernier-go-extensions/go_motion_extension.js</a></p>
+<a href="https://scratchx.org/?url=https://vernierst.github.io/scratch-vernier-go-extensions/go_motion_extension.js">https://scratchx.org/?url=https://vernierst.github.io/scratch-vernier-go-extensions/go_motion_extension.js</a></p>
 
 <p><strong>Go!Link</strong><br>
-<a href="http://scratchx.org/?url=http://vernierst.github.io/scratch-vernier-go-extensions/go_link_extension.js">http://scratchx.org/?url=http://vernierst.github.io/scratch-vernier-go-extensions/go_link_extension.js</a></p>
+<a href="https://scratchx.org/?url=https://vernierst.github.io/scratch-vernier-go-extensions/go_link_extension.js">https://scratchx.org/?url=https://vernierst.github.io/scratch-vernier-go-extensions/go_link_extension.js</a></p>
 
 
 <h2>
@@ -64,31 +64,31 @@
 
 <p>Connect the USB cable of your Go! device to your computer. If you are using the Go!Link, connect one of the following compatible sensors:</p>
 <ul>
-  <li><a href="http://www.vernier.com/acc-bta">25-g Accelerometer</a></li>
-  <li><a href="http://www.vernier.com/anm-bta">Anemometer</a></li>
-  <li><a href="http://www.vernier.com/bar-bta">Barometer</a></li>
-  <li><a href="http://www.vernier.com/con-bta">Conductivity Probe</a></li>
-  <li><a href="http://www.vernier.com/dcp-bta">Current Probe</a></li>
-  <li><a href="http://www.vernier.com/dvp-bta">Differential Voltage Probe</a></li>
-  <li><a href="http://www.vernier.com/dfs-bta">Dual-Range Force Sensor</a></li>
-  <li><a href="http://www.vernier.com/fp-bta">Force Plate</a></li>
-  <li><a href="http://www.vernier.com/gps-bta">Gas Pressure Sensor</a></li>
-  <li><a href="http://www.vernier.com/hd-bta">Hand Dynamometer</a></li>
-  <li><a href="http://www.vernier.com/anm-bta">Light Sensor</a></li>
-  <li><a href="http://www.vernier.com/lga-bta">Low-g Accelerometer</a></li>
-  <li><a href="http://www.vernier.com/mg-bta">Magnetic Field Sensor</a></li>
-  <li><a href="http://www.vernier.com/o2-bta">O2 Gas Sensor</a></li>
-  <li><a href="http://www.vernier.com/odo-bta">Optical Dissolved Oxygen</a></li>
-  <li><a href="http://www.vernier.com/ph-bta">pH Sensor</a></li>
-  <li><a href="http://www.vernier.com/sal-bta">Salinity Sensor</a></li>
-  <li><a href="http://www.vernier.com/sms-bta">Soil Moisture Sensor</a></li>
-  <li><a href="http://www.vernier.com/slm-bta">Sound Level Meter</a></li>
-  <li><a href="http://www.vernier.com/sls-bta">Sound Level Sensor</a></li>
-  <li><a href="http://www.vernier.com/tmp-bta">Stainless Steel Temperature Sensor</a></li>
-  <li><a href="http://www.vernier.com/sts-bta">Surface Temperature Sensor</a></li>
-  <li><a href="http://www.vernier.com/tilt-bta">TI Light Sensor</a></li>
-  <li><a href="http://www.vernier.com/uva-bta">UVA Sensor</a></li>
-  <li><a href="http://www.vernier.com/ph-bta">UVB Sensor</a></li>
+  <li><a href="https://www.vernier.com/acc-bta">25-g Accelerometer</a></li>
+  <li><a href="https://www.vernier.com/anm-bta">Anemometer</a></li>
+  <li><a href="https://www.vernier.com/bar-bta">Barometer</a></li>
+  <li><a href="https://www.vernier.com/con-bta">Conductivity Probe</a></li>
+  <li><a href="https://www.vernier.com/dcp-bta">Current Probe</a></li>
+  <li><a href="https://www.vernier.com/dvp-bta">Differential Voltage Probe</a></li>
+  <li><a href="https://www.vernier.com/dfs-bta">Dual-Range Force Sensor</a></li>
+  <li><a href="https://www.vernier.com/fp-bta">Force Plate</a></li>
+  <li><a href="https://www.vernier.com/gps-bta">Gas Pressure Sensor</a></li>
+  <li><a href="https://www.vernier.com/hd-bta">Hand Dynamometer</a></li>
+  <li><a href="https://www.vernier.com/anm-bta">Light Sensor</a></li>
+  <li><a href="https://www.vernier.com/lga-bta">Low-g Accelerometer</a></li>
+  <li><a href="https://www.vernier.com/mg-bta">Magnetic Field Sensor</a></li>
+  <li><a href="https://www.vernier.com/o2-bta">O2 Gas Sensor</a></li>
+  <li><a href="https://www.vernier.com/odo-bta">Optical Dissolved Oxygen</a></li>
+  <li><a href="https://www.vernier.com/ph-bta">pH Sensor</a></li>
+  <li><a href="https://www.vernier.com/sal-bta">Salinity Sensor</a></li>
+  <li><a href="https://www.vernier.com/sms-bta">Soil Moisture Sensor</a></li>
+  <li><a href="https://www.vernier.com/slm-bta">Sound Level Meter</a></li>
+  <li><a href="https://www.vernier.com/sls-bta">Sound Level Sensor</a></li>
+  <li><a href="https://www.vernier.com/tmp-bta">Stainless Steel Temperature Sensor</a></li>
+  <li><a href="https://www.vernier.com/sts-bta">Surface Temperature Sensor</a></li>
+  <li><a href="https://www.vernier.com/tilt-bta">TI Light Sensor</a></li>
+  <li><a href="https://www.vernier.com/uva-bta">UVA Sensor</a></li>
+  <li><a href="https://www.vernier.com/ph-bta">UVB Sensor</a></li>
 </ul>
 
 <h2>
@@ -107,10 +107,10 @@
 <p>There are also a few sample projects that demonstrate how to integrate real world physical measurements into your Scratch projects. Just click one of the following URLs:</p>
 
 <ul>
-<li><a href="http://scratchx.org/?url=http://vernierst.github.io/scratch-vernier-go-extensions/examples/SayTemp.sbx">SayTemp</a></li>
-<li><a href="http://scratchx.org/?url=http://vernierst.github.io/scratch-vernier-go-extensions/examples/DrawTemp.sbx">DrawTemp</a></li>
-<li><a href="http://scratchx.org/?url=http://vernierst.github.io/scratch-vernier-go-extensions/examples/SayMotion.sbx">SayMotion</a></li>
-<li><a href="http://scratchx.org/?url=http://vernierst.github.io/scratch-vernier-go-extensions/examples/SayReading.sbx">SayReading</a></li>
+<li><a href="https://scratchx.org/?url=https://vernierst.github.io/scratch-vernier-go-extensions/examples/SayTemp.sbx">SayTemp</a></li>
+<li><a href="https://scratchx.org/?url=https://vernierst.github.io/scratch-vernier-go-extensions/examples/DrawTemp.sbx">DrawTemp</a></li>
+<li><a href="https://scratchx.org/?url=https://vernierst.github.io/scratch-vernier-go-extensions/examples/SayMotion.sbx">SayMotion</a></li>
+<li><a href="https://scratchx.org/?url=https://vernierst.github.io/scratch-vernier-go-extensions/examples/SayReading.sbx">SayReading</a></li>
 </ul>
 
 <h2>
@@ -121,7 +121,7 @@
 <p><strong>Go!Temp</strong><br>
 <p>The Go!Temp will read temperatures between -20°C and 115°C, to an accuracy of +/- 0.5°C. The sensing element in the Go!Temp is located at the very tip of the probe. The sensing element responds in about 4 s to changes in temperatures; the Go!Temp will not measure rapid temperature changes any faster. The Go!Temp extension updates the temperature measurement about twice a second.<br>
 
-<p>For additional information about the Go!Temp, refer to the <a href="http://www.vernier.com/files/manuals/go-temp.pdf">Go!Temp user manual</a>.<br>
+<p>For additional information about the Go!Temp, refer to the <a href="https://www.vernier.com/files/manuals/go-temp.pdf">Go!Temp user manual</a>.<br>
 
 <p><strong>Go!Motion</strong><br>
 <p>The Go!Motion sensor measures the distance to a person or object between 0.15 and 6 m away, with an accuracy of 2 mm. To measure the distance, the Go!Motion makes a clicking sound, records the time until it hears the sound's echo, and then calculates the distance using a temperature-corrected speed of sound.<br>
@@ -134,7 +134,7 @@
 
 <p>The Go!Motion extension updates the distance measurement about 10 times a second.<br>
 
-<p>For additional information about the Go!Motion, refer to the <a href="http://www.vernier.com/manuals/go-mot/">Go!Motion user manual</a>.<br>
+<p>For additional information about the Go!Motion, refer to the <a href="https://www.vernier.com/files/manuals/go-mot/go-mot.pdf">Go!Motion user manual</a>.<br>
 
 <p><strong>Go!Link</strong><br>
 <p>The Go!Link is an expensive interface to connect standard ("BTA") Vernier sensors to a computer or Chromebook. The Go!Link extension will automatically identify any connected, compatible sensor when the extension is loaded. Sensor measurements are collected in the default units for the connected sensor; for instance, measurements from a Dual-Range Force Sensor are collected in newtons. The extension collects sensor measurements about 20 times a second. <br>
@@ -147,7 +147,7 @@
 <h1>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h1>
 
-<p>This page and the Go! Device extensions are maintained by Vernier Software &amp; Technology (<a href="https://github.com/VernierST" class="user-mention">@VernierST</a>). Special thanks to Kreg Hanning (<a href="https://github.com/khanning" class="user-mention">@khanning</a>) and the <a href="http://www.scratchfoundation.org/">Scratch Foundation</a> for their support, encouragement and for creating a fun and dynamic tool for exploring engineering and programming.</p>
+<p>This page and the Go! Device extensions are maintained by Vernier Software &amp; Technology (<a href="https://github.com/VernierST" class="user-mention">@VernierST</a>). Special thanks to Kreg Hanning (<a href="https://github.com/khanning" class="user-mention">@khanning</a>) and the <a href="https://www.scratchfoundation.org/">Scratch Foundation</a> for their support, encouragement and for creating a fun and dynamic tool for exploring engineering and programming.</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/VernierST/scratch-vernier-go-extensions">scratch-vernier-go-extensions</a> is maintained by <a href="https://github.com/VernierST">VernierST</a>.</span>
